--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Metal Ring Calculator</title>
+  <title>Metal Ring Cut Length Calculator</title>
   <style>
     body { font-family: Arial, sans-serif; background: #f8f8f8; margin: 0; padding: 0; }
     .container { max-width: 1100px; margin: 32px auto; background: #fff; padding: 24px; border-radius: 8px; box-shadow: 0 2px 10px #aaa2; }
